--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,19 @@
 
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb;MODE=MYSQL;
+spring.datasource.url=jdbc:mysql://localhost:3306/myselectshop?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=create
+
+
+# AWS Account Credentials (AWS ?? ?)
+cloud.aws.credentials.accessKey=AKIARGRYG3JDAZNHGD7D
+cloud.aws.credentials.secretKey=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
+
+# AWS S3 bucket Info (S3 ????)
+cloud.aws.s3.bucket=fortestblog
+cloud.aws.region.static=us-east-1
+cloud.aws.stack.auto=false
+
+# file upload max size (?? ??? ?? ??)
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
